# capsolver-agent

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: agent-integration.md  browser-tools-plan.md
src/capsolver_agent/: __init__.py  __main__.py  langchain_tools.py  schema.py
tests/: test_tools.py
