[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "capsolver-agent"
version = "0.1.0"
description = "Agent integrations for CapSolver — framework-agnostic tool definitions + LangChain tools."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["capsolver", "captcha", "agent", "langchain", "ai-agent", "tools"]
authors = [{ name = "capsolver-ai", email = "dev@capsolver.ai" }]
dependencies = [
    "capsolver-core>=0.1.0",
]

[project.optional-dependencies]
langchain = [
    "langchain-core>=0.3.0",
]
browser = [
    "playwright>=1.40",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://capsolver.com"
Repository = "https://github.com/capsolver-ai/agent-capsolver"
Issues = "https://github.com/capsolver-ai/agent-capsolver/issues"

[project.scripts]
capsolver-agent = "capsolver_agent.__main__:main"

# ── Development only ──────────────────────────────────────────
# Remove this entire [tool.uv.sources] section before publishing to PyPI.
# These local path overrides allow editable cross-repo development.
[tool.uv.sources]
capsolver-core = { path = "../capsolver-core" }

[tool.hatch.build.targets.wheel]
packages = ["src/capsolver_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.mypy]
python_version = "3.10"
strict = true
